--- a/docker/ros2/humble/aarch64/Dockerfile
+++ b/docker/ros2/humble/aarch64/Dockerfile
@@ -110,6 +110,7 @@ RUN apt-get update && \
 RUN uv pip install --upgrade pip \
     empy==3.3.4 \
     catkin_pkg \
+    pytest \
     setuptools==64.0 \
     wheel \
     ninja \
@@ -128,7 +129,7 @@ RUN uv pip install --upgrade pip \
     cupy-cuda12x \
     simple-parsing \
     transforms3d \
-    scipy
+    scipy 
 
 # Install ROS2 packages
 RUN apt update && apt install -y \
@@ -186,6 +187,12 @@ RUN ln -s ${WORKSPACE}/src/elevation_mapping_cupy/docker/extra_rosdeps.yaml /etc
 
 # For elevation_mapping_cupy
 ENV TURTLEBOT3_MODEL=waffle_realsense_depth
+RUN mkdir -p /home/ws/src/ && \
+    cd /home/ws && \
+    vcs import --recursive src < /src.repos && \
+    . /opt/ros/humble/setup.sh && \
+    colcon build --symlink-install --packages-up-to \
+        ros2_numpy
 
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
