--- a/elevation_mapping/elevation_mapping_demos/config/robots/simple_demo_robot.yaml
+++ b/elevation_mapping/elevation_mapping_demos/config/robots/simple_demo_robot.yaml
@@ -18,7 +18,7 @@
 # Robot.
 map_frame_id:                               odom
 robot_base_frame_id:                        odom
-robot_pose_with_covariance_topic:           odom
+robot_pose_with_covariance_topic:           /odom_pose
 robot_pose_cache_size:                      200
 input_sources:
   front: # A name to identify the input source
